models/granite/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: granite
  namespace: llama-serve
spec:
  selector:
    app: granite
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
